<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <color  name="colorBack">#c8cac9 </color>

    <string name="app_name">Rumah Sewa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sekilas_uika">Sekilas UIKA</string>
    <string name="cek_lokasi">Cek Lokasi</string>
    <string name="cari_lokasi">Cari Lokasi</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="help">Bantuan</string>
    <string name="load_picture">Load Picture</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="alamat">Alamat</string>
    <string name="no_telpon">No Telpon</string>
    <string name="harga_sewa">Harga Sewa</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="kos_picture">Kos Picture</string>
    <string name="photo_of_location">Photo Of Location</string>
    <string name="save">Save</string>
    <string name="pencarian">Pencarian</string>
    <string name="cari_berdasarkan">Cari Berdasarkan</string>
    <string name="content_sekilasuika"> Nama Universitas Ibn Khaldun bogor diambil dari nama seorang ulama dan cendekiawan muslim abad pertengahan yang bernama Ibn Khaldun. Universitas ini didirikan pada tanggal 10 Desember 1959 dan berkedudukan di Jakarta. Universitas Ibn Chaldun merupakan gabungan dari tiga Fakultas yang dibina oleh Yayasan Ibn Chaldun (Ibn Chaldun Foundation) dan Universitas Djakarta Indonesia yang terdiri dari 4 Fakultas yang ada di Bogor. Universitas Ibn Chaldun ini dibina oleh Yayasan Ibn Chaldun yang berkedudukan di Jakarta. Dengan demikian Ibn Chaldun terdiri dari 7 Fakultas yaitu 3 Fakultas di Jakarta dan 4 Fakultas di Bogor. Itilah sebabnya lambang Universitas Ibn Chaldun terdiri dari 7 sayap.
Pada tahun 1961 empat Fakultas di Bogor memisahkan diri dari UIC dan menjadi dua Universitas yaitu Universitas Ibn Khaldun Bogor dan Universitas Bogor yang sekarang bernama Universitas Pakuan.
Universitas Ibn Chaldun Bogor (UIC Bogor) didirikan pada tanggal 23 April 1961 dengan Surat Keputusan Dewan Pendiri Yayasan Ibn Chaldun No. 31/DPP/1961. Para pendiri UIC Bogor adalah dr. Marzuki Mahdi, KH. Sholeh Iskandar, RSA. Karta Djumena, Ir. Prijono Hardjosentono, Djunus Dali, Ir. Imam Rahardjo, RSA. Suwigyo, H.M. Djunaedi. UIC Bogor ini diberi hak otonomi baik di bidang organisasi, keuangan maupun administrasi.
</string>
	<string name="tentangAplikasi">Aplikasi ini membantu memberikan informasi lokasi rumah sewa disekitar UIKA Bogor. Dibuat sebagai syarat mendapatkan gelar sarjana</string>
	<string name="aboutFoni">Masagus Setiawan S.Kom., M.Kom. sebagai pembimbing satu lahir di Kudus pada 22 Juni 1997. Menempuh pendidikan S1 di Universitas Pakuan Bogor pada program studi ilmu komputer dan S2 di Magister ilmu komputer di Universitas Budi Luhur pada program kekhususan Software Enginering. </string>
	<string name="bantuan">Ada hanya perlu memilih menu Cek Lokasi untuk mengetahui lokasi-lokasi rumah sewa yang berada disekitar anda dalam bentuk peta dan anda bisa melakukan panggiln telpon jika no hp tersedia, anda juga bisa menggunakan fitur rute untuk mengetahui arah menuju lokasi rumah sewa yang anda tuju. Terimakasih</string>
	<string name="copyright">Copyright 2013 Riswan</string>
	<string name="aboutNovita">Novita Br Ginting S.Kom., M.Kom. Sebagai pembimbing pendamping Lulusan D3 STIKOM Bina Niaga Bogor,  S1 STMIK RSH Indonesia, S2 Budi Luhur dengan jurusan Management Information System.</string>
	
	<string name="image_location" >Gambar Lokasi</string>
	<string name="owner_name"> Nama Pemilik</string>
	<string name="rent" > Harga</string>
	<string name="phone_number"> No Telpon</string>
	<string name="fasilitas">Fasilitas</string>	
	<string name="description">Deskripsi</string>
	<string name="distance">Jarak</string>
	<string name="view_direction">Direction</string>
	<string name="btn_call">Panggil</string>
</resources>
