<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBack"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
   
    <ImageButton
        android:id="@+id/btnSekilasUika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btnSekilasUika"
        android:src="@drawable/sekilasuika"
        android:contentDescription="@string/sekilas_uika"/>

    <ImageButton
        android:id="@+id/btnInfoRumahSewa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cek_lokasi"
        android:onClick="btnInfoRumahSewa_OnClick"
        android:src="@drawable/ceklokasi" />

    <ImageButton
        android:id="@+id/btnPencarian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cari_lokasi"
        android:onClick="btnPencarian_onClick"
        android:src="@drawable/carilokasi" />

    <ImageButton
        android:id="@+id/btnAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/about"
        android:onClick="btnAbout_onClick"
        android:src="@drawable/tentanglokasi" />

    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/help"
        android:onClick="btnHelp_onClick"
        android:src="@drawable/bantuan" />

    <ImageButton
        android:id="@+id/btnTambahLokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tambah_lokasi"
        android:onClick="btnTambahLokasi_onClick"
        android:src="@drawable/tambahlokasi" />

</LinearLayout>

</ScrollView>