<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:text="@string/tentangAplikasi" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/aboutFoni"
        android:src="@drawable/pakfoni" />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textAlignment="gravity"
       android:contentDescription="@string/aboutFoni"
       android:text="@string/aboutFoni" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/bunovita" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:text="@string/copyright"
         />

</LinearLayout>
